rmv use of sun.misc.*
replace sun.misc.BASE64Encoder with java.util.Base64 which is new in
Java 8: https://stackoverflow.com/a/39711279